--- a/javascript/lesson2/lesson2.html
+++ b/javascript/lesson2/lesson2.html
@@ -31,20 +31,28 @@
          遍历读取aqiData中各个城市的数据
          将空气质量指数大于60的城市显示到aqi-list的列表中
          */
-        var i = 0, j = 8;
-        for(i;i<4;i++){
-            console.log('onei'+i);
-            for(j;j>4;j--){
-                console.log('onej'+j);
-            }
-            console.log('twoi'+i);
-            console.log('twoj'+j);
+        var newCity;
+        var str = '';
+        var oUl = document.getElementById('aqi-list');
+        var num = ['一', '二', '三', '四', '五', '六', '七'];
 
+        //用数组filter方法筛选
+        function myFilter(element) {
+            return (element[1] > 50);
         }
-
-            alert(111);
-
-        console.log('我能出来么')
+        newCity = aqiData.filter(myFilter);
+        //将城市污染从大到小排列
+        newCity = newCity.sort(function (val1, val2) {
+            return val2[1] - val1[1]
+        });
+        //将结果插入列表
+        for (var i = 0; i < newCity.length;
+        i++
+        )
+        {
+            str += '<li>第' + num[i] + '名:'+ newCity[i][0] + ', '+ newCity[i][1] +'</li>'
+        }
+        oUl.innerHTML = str;
     })();
 
 </script>
